# python-project-52

./: .env  Makefile  pyproject.toml
task_manager/: settings.py  urls.py  views.py
templates/: index.html
