[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Ruslan Shamsutdinov <nexus191@yandex.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
